clusterIp.yml
apiVersion: v1
kind: Service
metadata:
  name: my-cluster-service
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
