albIngress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "alis-ingress"

  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/tags: env=test, team=ali
  labels:
    app: nginx
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "my-node-service"
              servicePort: 80
